
 * [CHANGED] We are not longer using FasterCSV on Ruby 1.8.7.

 * [NEW] Introduced the concept of "Widgets". Dashboard is now a "Widget".
 
 * [CHANGED] Custom actions are back!

 * [REMOVED] Read Only option has been removed from configuration files. This
   wasn't really protecting the forms. We are now using `attr_protected` with
   roles: `attr_protected :title, :as => :admin`.

= 3.0.12

 * [FIXED] Use will_paginate 3.0.0.

= 3.0.9

 * [NEW] Refactored and renamed `User` extensions to `AdminUserV1`.

 * [NEW] `AdminUserV2` which uses `bcrypt` and it's simpler. This will be the
   default authentication mechanism for my new apps.

= 3.0.8 (unreleased)

 * [FIXED] Missing alias. (Commit 2af7d4cfd98bb0)

= 3.0.7

 *[CHANGED] Updated assets. Please run the `typus:assets` generator in order
  to create the new files on the new location.

= 3.0.3

 * [NEW] Support for has many through relationships. [jmeiss]

 * [CHANGED] Removed typus pagination module and use `will_paginate` one.
   Pagination options can be configure overriding `Typus.pagination` variable.

 * [FIXED] Queries are now using the table name. [tyx]

 * [NEW] All queries are `unscoped` so we can separate completely the frontend
   from the backend.

 * [NEW] We can disable sortable tables.

 * [FIXED] Url generation bug when using namespaced STI models. [masone]

 * [NEW] Raise an exception if config for model cannot be found. [masone]

 * [FIXED] Minor bug fixes and re-styling ...

 * [NEW] Layouts contain metatag with generator information.

 * [NEW] Added missing csrf_meta_tag in `session.html.erb` layout.

 * [NEW] Added constrain to database to avoid duplicated emails.

 * [FIXED] Dates on tables are localized.

 * [FIXED] `@resource.classify.constantize` becomes `@resource.constantize`.

 * [CHANGED] Updated `typus_preview` to display original filaname when file is
   not an image.

 * [NEW] Support for Dragonfly attachments. Template for this kind of attribute
   is `_dragonfly.html.erb`.
