@@ -14,18 +14,15 @@ Description:
 
       def generate_config
         copy_file "config/typus/README"
-        if (@configuration = generate_yaml)[:base].present?
-          %w(application.yml application_roles.yml).each do |file|
-            template "config/typus/#{file}", "config/typus/#{timestamp}_#{file}"
+        generate_yaml.each do |key, value|
+          if (@configuration = value)[:base].present?
+            template "config/typus/application.yml", "config/typus/#{key}.yml"
+            template "config/typus/application_roles.yml", "config/typus/#{key}_roles.yml"
           end
         end
       end
 
       protected
-
-      def timestamp
-        Time.zone.now.to_s(:number)
-      end
 
       def configuration
         @configuration
@@ -34,16 +31,16 @@ Description:
       def generate_yaml
         Typus.reload!
 
-        configuration = { :base => "", :roles => "" }
+        configuration = {}
 
-        Typus.application_models.sort { |x,y| x <=> y }.each do |model|
+        models = Typus.application_models.reject { |m| Typus.models.include?(m) }
+        models = models.map { |m| m.constantize }
 
-          next if Typus.models.include?(model)
-
-          klass = model.constantize
+        models.each do |model|
+          configuration[model.table_name] = {}
 
           relationships = [ :has_many, :has_one ].map do |relationship|
-                            klass.reflect_on_all_associations(relationship).map { |i| i.name.to_s }
+                            model.reflect_on_all_associations(relationship).map { |i| i.name.to_s }
                           end.flatten
 
           rejections = %w( ^id$
@@ -56,29 +53,28 @@ Description:
           default_rejections = (rejections + %w( password password_confirmation )).join("|")
           form_rejections = (rejections + %w( position )).join("|")
 
-          fields = klass.columns.map(&:name)
+          fields = model.columns.map(&:name)
           default = fields.reject { |f| f.match(default_rejections) }
           form = fields.reject { |f| f.match(form_rejections) }
 
           # We want attributes of belongs_to relationships to be shown in our
           # field collections if those are not polymorphic.
           [ default, form ].each do |fields|
-            fields << klass.reflect_on_all_associations(:belongs_to).reject { |i| i.options[:polymorphic] }.map { |i| i.name.to_s }
+            fields << model.reflect_on_all_associations(:belongs_to).reject { |i| i.options[:polymorphic] }.map { |i| i.name.to_s }
             fields.flatten!
           end
 
-          configuration[:base] << <<-RAW
-#{klass}:
+          configuration[model.table_name][:base] = <<-RAW
+#{model}:
   fields:
     default: #{default.join(", ")}
     form: #{form.join(", ")}
   relationships: #{relationships.join(", ")}
   application: #{options[:admin_title]}
-
           RAW
 
-          configuration[:roles] << <<-RAW
-  #{klass}: create, read, update, delete
+          configuration[model.table_name][:roles] = <<-RAW
+  #{model}: create, read, update, delete
           RAW
 
         end
