@@ -81,6 +81,8 @@
    wasn't really protecting the forms. We are now using `attr_protected` with
    roles: `attr_protected :title, :as => :admin`.
 
+ * [CHANGED] Configuration files are now generated by model not by groups.
+
 = 3.0.12
 
  * [FIXED] Use will_paginate 3.0.0.
